Fix scrollbars

--- a/src/App.css
+++ b/src/App.css
@@ -2,11 +2,19 @@
 	font-family: Segoe UI;
 	margin: 0;
 	padding: 0;
-	overflow-x: hidden;
+}
+
+#root {
+	position: absolute;
+	top: 0;
+	height: 100%;
+	width: 100%;
+	z-index: 100;
 }
 
 canvas {
+	position: fixed;
 	z-index: -900;
-	position: fixed; 
-	width: 100%;
+	height: 100%;
+	top: 0;
 }
