--- a/src/Landing/Landing.css
+++ b/src/Landing/Landing.css
@@ -1,6 +1,6 @@
 #landing {
+	position: relative;
 	display: inline-block;
-	position: absolute;
 	width: 100%;
 	top: 18%;
 	font-size: 1.5em;
@@ -33,11 +33,6 @@
 }
 
 @media screen and (min-width: 768px) {
-
-	#landing {
-		animation: float 60s infinite;
-		margin: auto;
-	}
 	
 	.landing_text {
 		font-size: 3em;
